--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>this is heading</h1>
     
 </body>
 </html>
+
+<!-- 
+git status
+git add index.html
+git commit -m "first v1 of index.html"
+git branch
+-->
