--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is heading</h1>
+    <h1>this is heading v3</h1>
     
 </body>
 </html>
 
 <!-- 
-git status
+git status/git log
 git add index.html
 git commit -m "first v1 of index.html"
 git branch
