--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>this is heading v6</h1>
+    <h1 class="head">this is heading v6</h1>
 
 </body>
 </html>
@@ -38,4 +39,15 @@ git reset --hard HEAD^
 git log -S "h1"
 git log -S "v3"
 
-git log --grep="v"->
+git log --grep="v"
+
+to know the status if it is linked to github
+git remote
+git remote -v
+git push
+git pull
+
+git clone
+git clone https://github.com/kokushibooAA/myrepoo.git
+if master to do any changes
+git pull->
