--- a/index.html
+++ b/index.html
@@ -38,4 +38,8 @@ git reset --hard HEAD^
 git log -S "h1"
 git log -S "v3"
 
-git log --grep="v"->
+git log --grep="v"
+
+moving from branch 
+git checkout main
+git checkout design->
