--- a/index.html
+++ b/index.html
@@ -39,4 +39,30 @@ git reset --hard HEAD^
 git log -S "h1"
 git log -S "v3"
 
-git log --grep="v"->
+git log --grep="v"
+
+to know the status if it is linked to github
+git remote
+git remote -v
+git push
+git pull
+
+git clone
+git clone https://github.com/kokushibooAA/myrepoo.git
+if master to do any changes
+git pull
+
+
+
+git branch design
+moving from branch 
+git checkout main
+
+isme bhi git add git commit krna pdega
+git checkout design
+
+git merge design
+git push
+
+ye bekar he
+git push origin design-->
