--- a/index.html
+++ b/index.html
@@ -65,4 +65,7 @@ git merge design
 git push
 
 ye bekar he
-git push origin design-->
+git push origin design
+
+agr example main wala bhi aur branch wala bhi h1 change krte he toh
+conflict hota he-->
