--- a/index.html
+++ b/index.html
@@ -68,4 +68,16 @@ ye bekar he
 git push origin design
 
 agr example main wala bhi aur branch wala bhi h1 change krte he toh
-conflict hota he-->
+conflict hota he
+
+untracked file ko remove krta he
+git clean -n
+git clean -f
+
+tag is used as id is hard to find for current version
+git tag -a V7 -m "this is v14"
+git tag
+git show
+
+for old version
+-->
